--- a/src/blocks/feed/feed.scss
+++ b/src/blocks/feed/feed.scss
@@ -3,77 +3,131 @@
 	background: url('#{$images-path}feed-bg-top.png') left 20px top -120px / auto no-repeat, url('#{$images-path}feed-bg-bottom.png') right -320px bottom 120px / auto no-repeat, linear-gradient(to top, #fdd311 0%, #fffee4 100%);
 	padding-bottom: 45px;
 	overflow: hidden;
+	
+	@include media('<=xxs') {
+		padding-bottom: 140px;
+	}
 
 	&__flyer-1 {
-		background: url('#{$images-path}flyer-1.png') center / contain no-repeat transparent;
-		height: 170px;
 		width: 240px;
 		position: absolute;
 		top: 275px;
 		right: -125px;
+		
+		@include media('<=xs') {
+			top: 60px;
+			right: -40px;
+			width: 110px;
+			z-index: 5;
+		}
 	}
 
 	&__flyer-2 {
-		background: url('#{$images-path}flyer-2.png') center / contain no-repeat transparent;
-		height: 145px;
 		width: 124px;
 		position: absolute;
 		top: 85px;
 		left: 30px;
+		
+		@include media('<=xs') {
+			z-index: 5;
+			top: calc(40vw + 100px);
+			left: 20px;
+			width: 80px;
+		}
 	}
 
 	&__flyer-3 {
-		background: url('#{$images-path}flyer-3.png') center / contain no-repeat transparent;
-		height: 45px;
-		width: 65px;
 		position: absolute;
+		width: 65px;
 		top: 750px;
 		left: 130px;
+		
+		@include media('<=xs') {
+			z-index: 5;
+			width: 40px;
+			top: 710px;
+			left: 0;
+		}
 	}
 
 	&__flyer-4 {
-		background: url('#{$images-path}flyer-4.png') center / contain no-repeat transparent;
-		width: 50px;
-		height: 35px;
 		position: absolute;
-		top: 600px;
+		width: 50px;
 		right: 45px;
+		top: 600px;
+		
+		@include media('<=xs') {
+			z-index: 5;
+			width: 35px;
+			right: 30px;
+			top: 370px;
+		}
 	}
 
 	&__flyer-5 {
-		background: url('#{$images-path}flyer-5.png') center / contain no-repeat transparent;
 		width: 100px;
-		height: 32px;
 		position: absolute;
 		top: 905px;
 		right: 335px;
+		
+		@include media('<=xs') {
+			z-index: 5;
+			width: 60px;
+			top: 905px;
+			right: 50px;
+		}
 	}
 
 	&__flyer-6 {
-		background: url('#{$images-path}flyer-6.png') center / contain no-repeat transparent;
-		width: 90px;
-		height: 115px;
 		position: absolute;
 		bottom: 415px;
+		width: 90px;
 		left: -5px;
+		
+		@include media('<=xs') {
+			z-index: 5;
+			bottom: 290px;
+			width: 60px;
+			left: 20px;
+		}
+		
+		@include media('<=xxs') {
+			bottom: 530px;
+		}
 	}
 
 	&__flyer-7 {
-		background: url('#{$images-path}flyer-7.png') center / contain no-repeat transparent;
-		width: 90px;
-		height: 55px;
 		position: absolute;
 		bottom: 215px;
+		width: 90px;
 		right: 30px;
+		
+		@include media('<=xs') {
+			z-index: 5;
+			bottom: 250px;
+			width: 60px;
+			right: 30px;
+		}
 	}
 
 	&__flyer-8 {
-		background: url('#{$images-path}flyer-8.png') center / contain no-repeat transparent;
-		width: 110px;
-		height: 80px;
 		position: absolute;
 		bottom: -40px;
+		width: 110px;
 		left: 207px;
+		
+		@include media('<=lg') {
+			bottom: -80px;
+			width: 100px;
+			left: 100px;
+		}
+		
+		@include media('<=xs') {
+			z-index: 5;
+			bottom: -70px;
+			width: 60px;
+			left: 25px;
+		}
 	}
 
 	&__inner {
@@ -90,6 +144,10 @@
 		justify-content: space-between;
 		max-width: 1095px;
 		margin: 0 auto 35px;
+		
+		@include media('<=xs') {
+			margin: 0 -100px 35px;
+		}
 	}
 
 	&__card {
@@ -145,6 +203,11 @@
 		margin: 0 auto 85px;
 		display: flex;
 		justify-content: center;
+		
+		@include media('<=xxs') {
+			margin: 0 auto;
+			display: block;
+		}
 	}
 
 	&__button {
@@ -157,6 +220,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		text-align: center;
 		color: #000;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -167,5 +231,14 @@
 		border-radius: 100px;
 		border: 2px solid black;
 		border-bottom-width: 7px;
+
+		@include media('<=xxs') {
+			margin: 0 auto 25px;
+		}
+
+		&_round {
+			max-width: 67px;
+			background: url('#{$images-path}feed-opensea.svg') center / auto no-repeat #FFFEE4;
+		}
 	}
 }
