--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -192,29 +192,29 @@
 	&__board-mobile {
 		display: none;
 		position: absolute;
+		top: 30%;
 		left: 50%;
 		transform: translateX(-50%);
 		width: calc(100% - 110px);
 		max-width: 245px;
-		top: 235px;
 		
 		@include media('<=xxs') {
 			display: block;
 		}
 		
 		@include media('<=xxxs') {
-			top: 228px;
+
 		}
 	}
 
 	&__cloud-mobile {
 		display: none;
 		position: absolute;
+		top: 25%;
 		left: 50%;
 		transform: translateX(-50%);
 		width: calc(100% - 40px);
 		max-width: 325px;
-		top: 195px;
 		
 		@include media('<=xxs') {
 			display: block;
