--- a/src/templates/_bottom.html
+++ b/src/templates/_bottom.html
@@ -13,7 +13,8 @@
 			<div class="footer__side-text">Brought to you by <a href="./">Blooming Design</a></div>
 		</div>
 	</div>
-</footer> 
+</footer>
+<div class="preloader"></div>
 <script src="common.js"></script> 
 </body> 
-</html> 
+</html>
