add televisor section

--- a/src/blocks/faq/faq.scss
+++ b/src/blocks/faq/faq.scss
@@ -1,8 +1,9 @@
-.info {
+.faq {
 	$self: &;
 	overflow: hidden;
-	// position: relative;
-	background: url('#{$images-path}info-glow.png') top 370px left -150px / auto no-repeat, url('#{$images-path}info-glow.png') bottom 200px right -300px / 750px auto no-repeat;
+	padding-top: 200px;
+	margin-top: -200px;
+	background: url('#{$images-path}info-glow.png') top 0 left -150px / auto no-repeat, url('#{$images-path}info-glow.png') bottom 200px right -300px / 750px auto no-repeat;
 	
 	@include media('<=xxlg') {
 		background: url('#{$images-path}info-glow.png') top 270px left -270px / auto no-repeat, url('#{$images-path}info-glow.png') bottom 200px right -300px / 750px auto no-repeat;
@@ -27,97 +28,11 @@
 		background: url('#{$images-path}info-glow.png') center / contain no-repeat;
 	} */
 	
-	&__partners {
-		position: relative;
-		min-height: 670px;
-		
-		@include media('<=lg') {
-			min-height: 580px;
-		}
-		
-		@include media('<=xs') {
-			min-height: 510px;
-		}
-		
-		@include media('<=xxs') {
-			min-height: 460px;
-		}
-	}
-
-	&__title {
-
-		&_partners {
-			display: flex;
-			flex-wrap: wrap;
-			max-width: 840px;
-			margin: 0 auto 100px;
-	
-			span:nth-child(2) {
-				margin: 0 30px;
-				color: #F83821;
-				
-				@include media('<=xxs') {
-					margin: 0 15px;
-				}
-			}
-	
-			span:nth-child(3) {
-				margin-left: auto;
-			}
-		}
-
-		&_faq {
-			text-align: center;
-			margin-bottom: 100px;
-			
-			@include media('<=xs') {
-				text-align: left;
-				margin-bottom: 60px;
-			}
-			
-			@include media('<=xxs') {
-
-			}
-		}
-	}
-
-	&__type {
-		position: absolute;
-		top: auto;
-		left: 50%;
-		height: 90px;
-		border: 2px solid black;
-		width: 2000px;
-		z-index: 1;
-		background-position: center;
-		background-size: auto;
-		background-repeat: repeat-x;
-		transform-origin: 0;
-		
-		@include media('<=xs') {
-			height: 50px;
-			background-size: 110px auto;
-		}
-
-		&_1 {
-			background-color: #FDD30F;
-			background-image: url('#{$images-path}partners-type-1.png');
-			transform: rotate(16deg) translateX(-50%);
-		}
-		
-		&_2 {
-			background-color: #F83821;
-			background-image: url('#{$images-path}partners-type-2.png');
-			transform: rotate(-6deg) translateX(-50%);
-			box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.3);
-		}
-	}
-	
 	&__binoculars {
 		position: absolute;
 		z-index: 1;
 		width: 370px;
-		top: 210px;
+		top: 160px;
 		left: -100px;
 		
 		@include media('<=sm') {
@@ -136,7 +51,7 @@
 		}
 	}
 	
-	&__feed {
+	&__inner {
 		position: relative;
 		padding-bottom: 150px;
 	}
@@ -151,6 +66,16 @@
 		}
 	}
 
+	&__title {
+		grid-column: 4 / -2;
+		
+		@include media('<=xs') {
+			text-align: left;
+			margin-bottom: 60px;
+		}
+		
+	}
+	
 	&__item {
 		grid-column: 4 / -2;
 		box-sizing: border-box;
