--- a/src/blocks/roadmap/roadmap.scss
+++ b/src/blocks/roadmap/roadmap.scss
@@ -1,6 +1,15 @@
 .roadmap {
 	$self: &;
 	overflow: hidden;
+	padding: 190px 0 180px;
+	
+	@include media('<=lg') {
+		padding: 160px 0 180px;
+	}
+	
+	@include media('<=xs') {
+		padding: 260px 0 180px;
+	}
 
 	&__blaster {
 		position: absolute;
@@ -10,36 +19,24 @@
 		right: -100px;
 		
 		@include media('<=sm') {
-			width: 410px;
+			width: 360px;
 			right: -50px;
-			top: 85px;
+			top: -130px;
+		}
+		
+		@include media('<=xs') {
+			top: -210px;
 		}
 		
 		@include media('<=xxs') {
-			width: 350px;
+			width: 290px;
 			right: -30px;
-			top: 60px;
 		}
 	}
 
 	&__inner {
-		padding-top: 140px;
-		padding-bottom: 140px;
 		position: relative;
 		z-index: 2;
-		
-		@include media('<=lg') {
-			padding-bottom: 170px;
-		}
-		
-		@include media('<=sm') {
-			padding-bottom: 190px;
-			padding-top: 320px;
-		}
-		
-		@include media('<=xs') {
-			padding-bottom: 140px;
-		}
 	}
 
 	&__top {
@@ -119,6 +116,10 @@
 				transform: scale(1.0);
 			}
 		}
+			
+		@include media('<=lg') {
+			padding: 26px 50px 26px;
+		}
 
 		@include media('>sm') {
 
@@ -153,10 +154,6 @@
 		&:nth-child(1) {
 			grid-column: 1 / span 5;
 			
-			@include media('<=lg') {
-				grid-column: 2 / span 7;
-			}
-			
 			@include media('<=md') {
 				grid-column: 1 / span 8;
 			}
@@ -164,10 +161,6 @@
 		
 		&:nth-child(2) {
 			grid-column: 3 / span 5;
-			
-			@include media('<=lg') {
-				grid-column: 3 / span 7;
-			}
 			
 			@include media('<=md') {
 				grid-column: 2 / span 8;
@@ -177,10 +170,6 @@
 		&:nth-child(3) {
 			grid-column: 6 / span 5;
 			
-			@include media('<=lg') {
-				grid-column: 4 / span 7;
-			}
-			
 			@include media('<=md') {
 				grid-column: 3 / span 8;
 			}
@@ -188,10 +177,6 @@
 		
 		&:nth-child(4) {
 			grid-column: 8 / span 5;
-			
-			@include media('<=lg') {
-				grid-column: 5 / span 7;
-			}
 			
 			@include media('<=md') {
 				grid-column: 4 / span 8;
